--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ISA">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
