--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+  //  id 'com.google.gms.google-services' //turn this back on
 }
 
 android {
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.mobdeve.ramos.isa"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -36,9 +36,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
-    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
-    implementation 'com.google.android.gms:play-services-vision:20.1.1'
-    implementation 'com.google.android.gms:play-services-vision-common:19.1.1'
+  //  implementation 'com.google.firebase:firebase-ml-vision:24.1.0' //turn this back on
+    //implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+ //   implementation 'com.google.android.gms:play-services-vision:20.1.1' //turn this back on
+  //  implementation 'com.google.android.gms:play-services-vision-common:19.1.1' //turn this back on
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
